fix: table-pagination on small screens. adjust spacing and avoid line breaks

--- a/src/components/TablePagination/TablePagination.scss
+++ b/src/components/TablePagination/TablePagination.scss
@@ -45,4 +45,16 @@
     min-width: 0;
     width: 7rem;
   }
+
+  @media screen and (max-width: $breakpoint-small) {
+    .back,
+    .pagination-input {
+      margin-left: 0;
+    }
+
+    .next {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
 }
